--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,56 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #111111;
+        --foreground: #ededed;
+    }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.box {
+    box-shadow: 0px 2px 165px 19px #111111 inset;
+
+    mask-image: radial-gradient(circle, #111111 70%, rgba(0, 0, 0, 0) 100%);
+}
+
+.box_child {
+    box-shadow: 0px -44px 100px -78px rgba(0, 0, 0, 1) inset;
+}
+
+.movie_cont:hover .movie_item {
+    left: 0;
+}
+
+.movie_item {
+    left: -100%;
+    transition: 0.3s ease-in-out;
+}
+
+.submit {
+    background-color: #111111;
+    border: 1px solid white !important;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+input {
+    outline: none;
+}
+
+.btn {
+    border: 1px solid white;
 }
